fix(VDataTable): data table expand button content overflows (#20545)

--- a/packages/vuetify/src/components/VDataTable/VDataTable.sass
+++ b/packages/vuetify/src/components/VDataTable/VDataTable.sass
@@ -134,7 +134,7 @@
 
   .v-data-table__tr--mobile
     > .v-data-table__td--expanded-row
-      grid-template-columns: 0
+      grid-template-columns: auto
       justify-content: center
 
     > .v-data-table__td--select-row
